some part of the first screen

--- a/index.html
+++ b/index.html
@@ -2,15 +2,119 @@
 <html>
 
 <head>
-  <title>Hacken</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hacken</title>
+
   <!-- CSS FILES -->
-  <link href="css/style.css" rel="stylesheet">
+  <link href="src/css/style.css" rel="stylesheet">
 </head>
 
 <body>
+  <div class="hk-screen hk-main">
+    <header class="hk-header">
+      <a class="hk-subscribe" href="">
+        <span class="hk-subscribe-icon"></span>
+        <span class="hk-subscribe-link">Subscribe to our newsletter</span>
+      </a>
 
+      <ul class="hk-social">
+        <li class="hk-social-link">
+          <span class="hk-social-icon hk-slack"></span>
+        </li>
+        <li class="hk-social-link">
+          <span class="hk-social-icon hk-facebook"></span>
+        </li>
+        <li class="hk-social-link">
+          <span class="hk-social-icon hk-twiter"></span>
+        </li>
+        <li class="hk-social-link">
+          <span class="hk-social-icon hk-reddit"></span>
+        </li>
+        <li class="hk-social-link">
+          <span class="hk-social-icon hk-telegram"></span>
+        </li>
+      </ul>
+
+      <button class="hk-report-button">
+        <span class="hk-report-icon"></span>
+      </button>
+
+      <div id="hk-language-select">
+        <a class="hk-lang-eng active" href=""> Eng </a>
+        <a class="hk-lang-ru" href=""> Ru </a>
+      </div>
+    </header>
+
+    <nav class="hk-navigation">
+      <a class="hk-logo" href=""><img src="src/img/hacken-logo.png" alt="Hacken" /></a>
+
+      <ul class="hk-nav-menu">
+        <li><a href="" class="hk-nav-item"><span class="hk-menu-circle"></span></a></li>
+        <li><a href="" class="hk-nav-item"><span class="hk-menu-circle"></span></a></li>
+        <li><a href="" class="hk-nav-item"><span class="hk-menu-circle"></span></a></li>
+        <li><a href="" class="hk-nav-item"><span class="hk-menu-circle"></span></a></li>
+        <li><a href="" class="hk-nav-item"><span class="hk-menu-circle"></span></a></li>
+        <li><a href="" class="hk-nav-item"><span class="hk-menu-circle"></span></a></li>
+        <li><a href="" class="hk-nav-item"><span class="hk-menu-circle"></span></a></li>
+        <li><a href="" class="hk-nav-item"><span class="hk-menu-circle"></span></a></li>
+        <li><a href="" class="hk-nav-item"><span class="hk-menu-circle"></span></a></li>
+        <li><a href="" class="hk-nav-item"><span class="hk-menu-circle"></span></a></li>
+        <li><a href="" class="hk-nav-item"><span class="hk-menu-circle"></span></a></li>
+      </ul>
+    </nav>
+
+    <div class="hk-central_block">
+      <div>
+        <h1>Dedicated <span class="hk-text_blue">cryptocurrency</span><br /><span class="hk-text_bold">for white hat hackers</span></h1>
+        <p>Invest into the safe data future</p>
+        <a href=""><span class="hk-pdf">PDF</span> Whitepaper</a>
+        <a href=""><span class="hk-video"></span>Watch video</a>
+      </div>
+    </div>
+
+    <div class="hk-timer">
+      <div class="hk-time">
+        <span>Time to start</span>
+      </div>
+      <div class="hk-amount">
+        <span>Amount of money raised</span>
+      </div>
+    </div>
+  </div>
+  <div class="hk-screen hk-about">
+
+  </div>
+  <div class="hk-screen hk-timeline">
+
+  </div>
+  <div class="hk-screen hk-hacken">
+
+  </div>
+  <div class="hk-screen hk-milestones">
+
+  </div>
+  <div class="hk-screen hk-ico">
+
+  </div>
+  <div class="hk-screen hk-burning">
+
+  </div>
+  <div class="hk-screen hk-details">
+
+  </div>
+  <div class="hk-screen hk-bonuses">
+
+  </div>
+  <div class="hk-screen hk-bounty">
+
+  </div>
+  <div class="hk-screen hk-team">
+
+  </div>
+  <div class="hk-screen hk-partners">
+
+  </div>
 </body>
 
 </html>
