fonts, first, second and third slide, menu (only view)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <!-- CSS FILES -->
   <link href="src/css/style.css" rel="stylesheet">
+  <link href="src/css/fonts.css" rel="stylesheet">
 </head>
 
 <body>
@@ -50,17 +51,17 @@
       <a class="hk-logo" href=""><img src="src/img/hacken-logo.png" alt="Hacken" /></a>
 
       <ul class="hk-nav-menu">
-        <li><a href="" class="hk-nav-item"><span class="hk-menu-circle"></span></a></li>
-        <li><a href="" class="hk-nav-item"><span class="hk-menu-circle"></span></a></li>
-        <li><a href="" class="hk-nav-item"><span class="hk-menu-circle"></span></a></li>
-        <li><a href="" class="hk-nav-item"><span class="hk-menu-circle"></span></a></li>
-        <li><a href="" class="hk-nav-item"><span class="hk-menu-circle"></span></a></li>
-        <li><a href="" class="hk-nav-item"><span class="hk-menu-circle"></span></a></li>
-        <li><a href="" class="hk-nav-item"><span class="hk-menu-circle"></span></a></li>
-        <li><a href="" class="hk-nav-item"><span class="hk-menu-circle"></span></a></li>
-        <li><a href="" class="hk-nav-item"><span class="hk-menu-circle"></span></a></li>
-        <li><a href="" class="hk-nav-item"><span class="hk-menu-circle"></span></a></li>
-        <li><a href="" class="hk-nav-item"><span class="hk-menu-circle"></span></a></li>
+        <li><a href="" class="hk-nav-item"><span class="hk-nav-item_name">About</span><span class="hk-menu-circle"></span></a></li>
+        <li><a href="" class="hk-nav-item"><span class="hk-nav-item_name">Timeline</span><span class="hk-menu-circle"></span></a></li>
+        <li><a href="" class="hk-nav-item"><span class="hk-nav-item_name">Hacken</span><span class="hk-menu-circle"></span></a></li>
+        <li><a href="" class="hk-nav-item"><span class="hk-nav-item_name">Milestones</span><span class="hk-menu-circle"></span></a></li>
+        <li><a href="" class="hk-nav-item"><span class="hk-nav-item_name">ICO</span><span class="hk-menu-circle"></span></a></li>
+        <li><a href="" class="hk-nav-item"><span class="hk-nav-item_name">Burning model</span><span class="hk-menu-circle"></span></a></li>
+        <li><a href="" class="hk-nav-item"><span class="hk-nav-item_name">ICO details</span><span class="hk-menu-circle"></span></a></li>
+        <li><a href="" class="hk-nav-item"><span class="hk-nav-item_name">Bonuses</span><span class="hk-menu-circle"></span></a></li>
+        <li><a href="" class="hk-nav-item"><span class="hk-nav-item_name">Bounty</span><span class="hk-menu-circle"></span></a></li>
+        <li><a href="" class="hk-nav-item"><span class="hk-nav-item_name">Executive team</span><span class="hk-menu-circle"></span></a></li>
+        <li><a href="" class="hk-nav-item"><span class="hk-nav-item_name">Partners</span><span class="hk-menu-circle"></span></a></li>
       </ul>
     </nav>
 
@@ -75,24 +76,142 @@
 
     <div class="hk-timer">
       <div class="hk-time">
-        <span>Time to start</span>
+        <span class="hk-time-header">Time to start</span>
       </div>
       <div class="hk-amount">
-        <span>Amount of money raised</span>
+        <span class="hk-amount-header">Amount of money raised</span>
+        <span class="hk-amount-number">36</span>
       </div>
     </div>
   </div>
   <div class="hk-screen hk-about">
-
+    <div class="hk-central_block">
+      <div>
+        <h2 class="">About project</h2>
+        <hr />
+        <p class="hk-about-quote_text">Hacken is the first cyber security expertise decentralized cryptocurrency, build on Ethereum.</p>
+        <p class="hk-about-descr">
+          Hacken is the first cyber security expertise decentralized cryptocurrency, build on Ethereum. It creates the ecosystem for providing high quality cyber security services for the companies all around the world. The ICO is powered by the CyberGuard Company.
+          CyberGuard accumulates and distributes the investments, controls the processes and develops the Hackenproof platform a marketplace for the cyber security services.
+        </p>
+        <p class="hk-about-descr">
+          The platform will allow users to purchase penetration test services for their products or systems. Hackenproof will provide clients with the o fficial digital mark and certificate in case of successful completion of cybersecurity test.
+          <br /><br /> The tests will be run by the best teams of us white hackers.
+        </p>
+      </div>
+    </div>
   </div>
   <div class="hk-screen hk-timeline">
-
+    <div class="hk-central_block">
+      <div>
+        <h2>Timeline</h2>
+        <div class="hk-timeline-figure">
+          <div class="hk-timeline-line-1">
+            <span class="hk-cell-1">10th August</span>
+            <span class="hk-cell-2">26th August</span>
+            <span class="hk-cell-3">5th September</span>
+            <span class="hk-cell-4">10th September</span>
+          </div>
+          <div class="hk-timeline-line-2">
+            <span class="hk-cell-1">Campain start</span>
+            <span class="hk-cell-2">Online CTF <br />challenge</span>
+            <span class="hk-cell-3">The Winners are  announced <br />and invited for HackIT week</span>
+            <span class="hk-cell-4">Presale</span>
+          </div>
+          <div class="hk-timeline-line-3">
+            <span class="hk-cell-1">23rd September</span>
+            <span class="hk-cell-2">23-29 September</span>
+            <span class="hk-cell-3">30th September</span>
+            <span class="hk-cell-4">7th October</span>
+          </div>
+          <div class="hk-timeline-line-4">
+            <span class="hk-cell-1">HackIT conference</span>
+            <span class="hk-cell-2">HackIT week</span>
+            <span class="hk-cell-3">The Final Competition on <br />the biggest aircraft Mriya</span>
+            <span class="hk-cell-4">ICO</span>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="hk-screen hk-hacken">
+    <div class="hk-central_block">
+      <div>
+        <h2>What is Hacken</h2>
+        <div>
 
+        </div>
+      </div>
+    </div>
   </div>
   <div class="hk-screen hk-milestones">
-
+    <div class="hk-central_block">
+      <div>
+        <h2>Milestones</h2>
+        <div>
+          <div class="hk-milestones-block_headers">
+            <div class="hk-milestones-block_header-1">
+              <h4>1. Minimum milestone</h4>
+              <hr />
+              <p>1,5 min</p>
+            </div>
+            <div class="hk-milestones-block_header-2">
+              <h4>2. Limited Milestone</h4>
+              <hr />
+              <p>4 min</p>
+            </div>
+            <div class="hk-milestones-block_header-3">
+              <h4>3. Target Milestone</h4>
+              <hr />
+              <p>10 min</p>
+            </div>
+            <div class="hk-milestones-block_header-4">
+              <h4>4. Advanced Milestone</h4>
+              <hr />
+              <p>18 min</p>
+            </div>
+            <div class="hk-milestones-block_header-5">
+              <h4>5. Maximum Milestone</h4>
+              <hr />
+              <p>20 min</p>
+            </div>
+          </div>
+          <div>
+            <div class="hk-milestones-block hk-block-1">
+              <p>
+                15% - HackIT conference
+                <br /> 85% - HackenProof platform
+              </p>
+            </div>
+            <div class="hk-milestones-block hk-block-2">
+              <p>
+                15% - HackIT conference
+                <br /> 60% - HackenProof platform
+                <br /> 25% - Cybersecurity products acceleration and incubation
+              </p>
+            </div>
+            <div class="hk-milestones-block hk-block-3">
+              15% - HackIT conference
+              <br /> 40% - HackenProof platform
+              <br /> 45% - Cybersecurity products acceleration and incubation
+            </div>
+            <div class="hk-milestones-block hk-block-4">
+              10% - HackIT conference
+              <br /> 30% - HackenProof platform
+              <br /> 30% - Cybersecurity products acceleration and incubation
+              <br /> 30% - Unreported zero-day remuneration platform
+            </div>
+            <div class="hk-milestones-block hk-block-5">
+              10% - HackIT conference
+              <br /> 25% - HackenProof platform
+              <br /> 25% - Cybersecurity products acceleration and incubation
+              <br /> 30% - Unreported zero-day remuneration platform
+              <br /> 10% - Cyber security
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="hk-screen hk-ico">
 
