--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <div class="hk-central_block">
       <div>
         <h2>What is Hacken</h2>
-        <div>
+        <div class="hk-hacken-figure">
 
         </div>
       </div>
