4-th and 5-th slide

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <li><a href="" class="hk-nav-item"><span class="hk-nav-item_name">Timeline</span><span class="hk-menu-circle"></span></a></li>
         <li><a href="" class="hk-nav-item"><span class="hk-nav-item_name">Hacken</span><span class="hk-menu-circle"></span></a></li>
         <li><a href="" class="hk-nav-item"><span class="hk-nav-item_name">Milestones</span><span class="hk-menu-circle"></span></a></li>
-        <li><a href="" class="hk-nav-item"><span class="hk-nav-item_name">ICO</span><span class="hk-menu-circle"></span></a></li>
+        <li><a href="" class="hk-nav-item"><span class="hk-nav-item_name">Token sale</span><span class="hk-menu-circle"></span></a></li>
         <li><a href="" class="hk-nav-item"><span class="hk-nav-item_name">Burning model</span><span class="hk-menu-circle"></span></a></li>
-        <li><a href="" class="hk-nav-item"><span class="hk-nav-item_name">ICO details</span><span class="hk-menu-circle"></span></a></li>
+        <li><a href="" class="hk-nav-item"><span class="hk-nav-item_name">Token sale details</span><span class="hk-menu-circle"></span></a></li>
         <li><a href="" class="hk-nav-item"><span class="hk-nav-item_name">Bonuses</span><span class="hk-menu-circle"></span></a></li>
         <li><a href="" class="hk-nav-item"><span class="hk-nav-item_name">Bounty</span><span class="hk-menu-circle"></span></a></li>
         <li><a href="" class="hk-nav-item"><span class="hk-nav-item_name">Executive team</span><span class="hk-menu-circle"></span></a></li>
@@ -89,13 +89,13 @@
       <div>
         <h2 class="">About project</h2>
         <hr />
-        <p class="hk-about-quote_text">Hacken is the first cyber security expertise decentralized cryptocurrency, build on Ethereum.</p>
+        <p class="hk-about-quote_text">Hacken is the first cybersecurity expertise decentralized cryptocurrency, build on Ethereum.</p>
         <p class="hk-about-descr">
-          Hacken is the first cyber security expertise decentralized cryptocurrency, build on Ethereum. It creates the ecosystem for providing high quality cyber security services for the companies all around the world. The ICO is powered by the CyberGuard Company.
-          CyberGuard accumulates and distributes the investments, controls the processes and develops the Hackenproof platform a marketplace for the cyber security services.
+          Hacken is the first cyber security expertise decentralized cryptocurrency, build on Ethereum. It creates the ecosystem for providing high quality cyber security services for the companies all around the world. The Token sale is powered by the CyberGuard Company.
+          CyberGuard accumulates and distributes the investments, controls the processes and develops the HackenProof platform a marketplace for the cyber security services.
         </p>
         <p class="hk-about-descr">
-          The platform will allow users to purchase penetration test services for their products or systems. Hackenproof will provide clients with the o fficial digital mark and certificate in case of successful completion of cybersecurity test.
+          The platform will allow users to purchase penetration test services for their products or systems. HackenProof will provide clients with the o fficial digital mark and certificate in case of successful completion of cybersecurity test.
           <br /><br /> The tests will be run by the best teams of us white hackers.
         </p>
       </div>
@@ -108,7 +108,7 @@
         <div class="hk-timeline-figure">
           <div class="hk-timeline-line-1">
             <span class="hk-cell-1">10th August</span>
-            <span class="hk-cell-2">26th August</span>
+            <span class="hk-cell-2">25th August</span>
             <span class="hk-cell-3">5th September</span>
             <span class="hk-cell-4">10th September</span>
           </div>
@@ -128,7 +128,7 @@
             <span class="hk-cell-1">HackIT conference</span>
             <span class="hk-cell-2">HackIT week</span>
             <span class="hk-cell-3">The Final Competition on <br />the biggest aircraft Mriya</span>
-            <span class="hk-cell-4">ICO</span>
+            <span class="hk-cell-4">Token sale</span>
           </div>
         </div>
       </div>
@@ -139,7 +139,11 @@
       <div>
         <h2>What is Hacken</h2>
         <div class="hk-hacken-figure">
-
+          <div id="hacken-1">Hacken accelerator <span>i</span></div>
+          <div id="hacken-2">Annual HackIT <br />Conference <span>i</span></div>
+          <div id="hacken-3">HackenProof <span>i</span></div>
+          <div id="hacken-4">CyberSecurity <br />analytics center <span>i</span></div>
+          <div id="hacken-5">Zero-day remuneration <br />platform <span>i</span></div>
         </div>
       </div>
     </div>
@@ -176,44 +180,50 @@
               <p>20 min</p>
             </div>
           </div>
-          <div>
+          <div class="hk-milestones-block_cards">
             <div class="hk-milestones-block hk-block-1">
               <p>
-                15% - HackIT conference
-                <br /> 85% - HackenProof platform
+                <span class="hk-bolder">15</span><span class="hk-bold">%</span> - HackIT conference
+                <br /><br /><span class="hk-bolder">85</span><span class="hk-bold">%</span> - HackenProof platform
               </p>
             </div>
             <div class="hk-milestones-block hk-block-2">
               <p>
-                15% - HackIT conference
-                <br /> 60% - HackenProof platform
-                <br /> 25% - Cybersecurity products acceleration and incubation
+                <span class="hk-bolder">15</span><span class="hk-bold">%</span> - HackIT conference
+                <br /><br /><span class="hk-bolder">60</span><span class="hk-bold">%</span> - HackenProof platform
+                <br /><br /><span class="hk-bolder">25</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation
               </p>
             </div>
             <div class="hk-milestones-block hk-block-3">
-              15% - HackIT conference
-              <br /> 40% - HackenProof platform
-              <br /> 45% - Cybersecurity products acceleration and incubation
+              <p>
+                <span class="hk-bolder">15</span><span class="hk-bold">%</span> - HackIT conference
+                <br /><br /><span class="hk-bolder">40</span><span class="hk-bold">%</span> - HackenProof platform
+                <br /><br /><span class="hk-bolder">45</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation
+              </p>
             </div>
             <div class="hk-milestones-block hk-block-4">
-              10% - HackIT conference
-              <br /> 30% - HackenProof platform
-              <br /> 30% - Cybersecurity products acceleration and incubation
-              <br /> 30% - Unreported zero-day remuneration platform
-            </div>
+              <p>
+                <span class="hk-bolder">10</span><span class="hk-bold">%</span> - HackIT conference
+                <br /><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - HackenProof platform
+                <br /><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation
+                <br /><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - Unreported zero-day remuneration platform
+              </p>
+              </div>
             <div class="hk-milestones-block hk-block-5">
-              10% - HackIT conference
-              <br /> 25% - HackenProof platform
-              <br /> 25% - Cybersecurity products acceleration and incubation
-              <br /> 30% - Unreported zero-day remuneration platform
-              <br /> 10% - Cyber security
+              <p>
+                <span class="hk-bolder">10</span><span class="hk-bold">%</span> - HackIT conference
+                <br /><br /><span class="hk-bolder">25</span><span class="hk-bold">%</span> - HackenProof platform
+                <br /><br /><span class="hk-bolder">25</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation
+                <br /><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - Unreported zero-day remuneration platform
+                <br /><br /><span class="hk-bolder">10</span><span class="hk-bold">%</span> - CyberSecurity
+              </p>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="hk-screen hk-ico">
+  <div class="hk-screen hk-token_sale">
 
   </div>
   <div class="hk-screen hk-burning">
