--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <!-- CSS FILES -->
   <link href="src/css/style.css" rel="stylesheet">
   <link href="src/css/fonts.css" rel="stylesheet">
+  <link href="src/css/material-design-iconic-font.css" rel="stylesheet">
 </head>
 
 <body>
@@ -21,25 +22,40 @@
 
       <ul class="hk-social">
         <li class="hk-social-link">
-          <span class="hk-social-icon hk-slack"></span>
+          <a href="#" role="link">
+            <i class="zmdi zmdi-twitter"></i>
+          </a>
         </li>
         <li class="hk-social-link">
-          <span class="hk-social-icon hk-facebook"></span>
+          <a href="#" role="link">
+            <i class="zmdi zmdi-facebook"></i>
+          </a>
         </li>
         <li class="hk-social-link">
-          <span class="hk-social-icon hk-twiter"></span>
+          <a href="#" role="link">
+            <i class="zmdi zmdi-twitter"></i>
+          </a>
         </li>
         <li class="hk-social-link">
-          <span class="hk-social-icon hk-reddit"></span>
+          <a href="#" role="link">
+            <i class="zmdi zmdi-reddit"></i>
+          </a>
         </li>
         <li class="hk-social-link">
-          <span class="hk-social-icon hk-telegram"></span>
+          <a href="#" role="link">
+            <i class="zmdi zmdi-twitter"></i>
+          </a>
+        </li>
+        <li class="hk-social-link">
+          <a href="#" role="link">
+            <i class="zmdi zmdi-twitter"></i>
+          </a>
         </li>
       </ul>
 
-      <button class="hk-report-button">
-        <span class="hk-report-icon"></span>
-      </button>
+      <!--<button class="hk-report-button">-->
+        <!--<span class="hk-report-icon"></span>-->
+      <!--</button>-->
 
       <div id="hk-language-select">
         <a class="hk-lang-eng active" href=""> Eng </a>
@@ -69,8 +85,10 @@
       <div>
         <h1>Dedicated <span class="hk-text_blue">cryptocurrency</span><br /><span class="hk-text_bold">for white hat hackers</span></h1>
         <p>Invest into the safe data future</p>
-        <a href=""><span class="hk-pdf">PDF</span> Whitepaper</a>
-        <a href=""><span class="hk-video"></span>Watch video</a>
+        <div class="main-page-links">
+          <a href=""><span class="hk-pdf">PDF</span>Whitepaper</a>
+          <a href=""><span class="hk-video"><i class="zmdi zmdi-play-circle"></i></i></span>Watch video</a>
+        </div>
       </div>
     </div>
 
@@ -103,9 +121,9 @@
   </div>
   <div class="hk-screen hk-timeline">
     <div class="hk-central_block">
-      <div>
+      <div class="not-relative">
         <h2>Timeline</h2>
-        <div class="hk-timeline-figure">
+        <div class="hk-timeline-figure absolute-center margin-none">
           <div class="hk-timeline-line-1">
             <span class="hk-cell-1">10th August</span>
             <span class="hk-cell-2">25th August</span>
@@ -128,7 +146,7 @@
             <span class="hk-cell-1">HackIT conference</span>
             <span class="hk-cell-2">HackIT week</span>
             <span class="hk-cell-3">The Final Competition on <br />the biggest aircraft Mriya</span>
-            <span class="hk-cell-4">Token sale</span>
+            <span class="hk-cell-4">ICO</span>
           </div>
         </div>
       </div>
@@ -136,9 +154,9 @@
   </div>
   <div class="hk-screen hk-hacken">
     <div class="hk-central_block">
-      <div>
+      <div class="not-relative">
         <h2>What is Hacken</h2>
-        <div class="hk-hacken-figure">
+        <div class="hk-hacken-figure absolute-center margin-none">
           <div id="hacken-1">Hacken accelerator <span>i</span></div>
           <div id="hacken-2">Annual HackIT <br />Conference <span>i</span></div>
           <div id="hacken-3">HackenProof <span>i</span></div>
@@ -150,73 +168,75 @@
   </div>
   <div class="hk-screen hk-milestones">
     <div class="hk-central_block">
-      <div>
+      <div class="not-relative">
         <h2>Milestones</h2>
         <div>
-          <div class="hk-milestones-block_headers">
-            <div class="hk-milestones-block_header-1">
-              <h4>1. Minimum milestone</h4>
-              <hr />
-              <p>1,5 min</p>
-            </div>
-            <div class="hk-milestones-block_header-2">
-              <h4>2. Limited Milestone</h4>
-              <hr />
-              <p>4 min</p>
-            </div>
-            <div class="hk-milestones-block_header-3">
-              <h4>3. Target Milestone</h4>
-              <hr />
-              <p>10 min</p>
-            </div>
-            <div class="hk-milestones-block_header-4">
-              <h4>4. Advanced Milestone</h4>
-              <hr />
-              <p>18 min</p>
-            </div>
-            <div class="hk-milestones-block_header-5">
-              <h4>5. Maximum Milestone</h4>
-              <hr />
-              <p>20 min</p>
-            </div>
-          </div>
-          <div class="hk-milestones-block_cards">
-            <div class="hk-milestones-block hk-block-1">
-              <p>
-                <span class="hk-bolder">15</span><span class="hk-bold">%</span> - HackIT conference
-                <br /><br /><span class="hk-bolder">85</span><span class="hk-bold">%</span> - HackenProof platform
-              </p>
-            </div>
-            <div class="hk-milestones-block hk-block-2">
-              <p>
-                <span class="hk-bolder">15</span><span class="hk-bold">%</span> - HackIT conference
-                <br /><br /><span class="hk-bolder">60</span><span class="hk-bold">%</span> - HackenProof platform
-                <br /><br /><span class="hk-bolder">25</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation
-              </p>
-            </div>
-            <div class="hk-milestones-block hk-block-3">
-              <p>
-                <span class="hk-bolder">15</span><span class="hk-bold">%</span> - HackIT conference
-                <br /><br /><span class="hk-bolder">40</span><span class="hk-bold">%</span> - HackenProof platform
-                <br /><br /><span class="hk-bolder">45</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation
-              </p>
-            </div>
-            <div class="hk-milestones-block hk-block-4">
-              <p>
-                <span class="hk-bolder">10</span><span class="hk-bold">%</span> - HackIT conference
-                <br /><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - HackenProof platform
-                <br /><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation
-                <br /><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - Unreported zero-day remuneration platform
-              </p>
+          <div class="absolute-center">
+            <div class="hk-milestones-block_headers">
+              <div class="hk-milestones-block_header-1">
+                <h4>1. Minimum milestone</h4>
+                <hr />
+                <p>1,5 min</p>
               </div>
-            <div class="hk-milestones-block hk-block-5">
-              <p>
-                <span class="hk-bolder">10</span><span class="hk-bold">%</span> - HackIT conference
-                <br /><br /><span class="hk-bolder">25</span><span class="hk-bold">%</span> - HackenProof platform
-                <br /><br /><span class="hk-bolder">25</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation
-                <br /><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - Unreported zero-day remuneration platform
-                <br /><br /><span class="hk-bolder">10</span><span class="hk-bold">%</span> - CyberSecurity
-              </p>
+              <div class="hk-milestones-block_header-2">
+                <h4>2. Limited Milestone</h4>
+                <hr />
+                <p>4 min</p>
+              </div>
+              <div class="hk-milestones-block_header-3">
+                <h4>3. Target Milestone</h4>
+                <hr />
+                <p>10 min</p>
+              </div>
+              <div class="hk-milestones-block_header-4">
+                <h4>4. Advanced Milestone</h4>
+                <hr />
+                <p>18 min</p>
+              </div>
+              <div class="hk-milestones-block_header-5">
+                <h4>5. Maximum Milestone</h4>
+                <hr />
+                <p>20 min</p>
+              </div>
+            </div>
+            <div class="hk-milestones-block_cards">
+              <div class="hk-milestones-block hk-block-1">
+                <p>
+                  <span class="hk-bolder">15</span><span class="hk-bold">%</span> - HackIT conference
+                  <br /><br /><span class="hk-bolder">85</span><span class="hk-bold">%</span> - HackenProof platform
+                </p>
+              </div>
+              <div class="hk-milestones-block hk-block-2">
+                <p>
+                  <span class="hk-bolder">15</span><span class="hk-bold">%</span> - HackIT conference
+                  <br /><br /><span class="hk-bolder">60</span><span class="hk-bold">%</span> - HackenProof platform
+                  <br /><br /><span class="hk-bolder">25</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation
+                </p>
+              </div>
+              <div class="hk-milestones-block hk-block-3">
+                <p>
+                  <span class="hk-bolder">15</span><span class="hk-bold">%</span> - HackIT conference
+                  <br /><br /><span class="hk-bolder">40</span><span class="hk-bold">%</span> - HackenProof platform
+                  <br /><br /><span class="hk-bolder">45</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation
+                </p>
+              </div>
+              <div class="hk-milestones-block hk-block-4">
+                <p>
+                  <span class="hk-bolder">10</span><span class="hk-bold">%</span> - HackIT conference
+                  <br /><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - HackenProof platform
+                  <br /><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation
+                  <br /><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - Unreported zero-day remuneration platform
+                </p>
+              </div>
+              <div class="hk-milestones-block hk-block-5">
+                <p>
+                  <span class="hk-bolder">10</span><span class="hk-bold">%</span> - HackIT conference
+                  <br /><br /><span class="hk-bolder">25</span><span class="hk-bold">%</span> - HackenProof platform
+                  <br /><br /><span class="hk-bolder">25</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation
+                  <br /><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - Unreported zero-day remuneration platform
+                  <br /><br /><span class="hk-bolder">10</span><span class="hk-bold">%</span> - CyberSecurity
+                </p>
+              </div>
             </div>
           </div>
         </div>
