--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="src/css/style.css" rel="stylesheet">
   <link href="src/css/fonts.css" rel="stylesheet">
   <link href="src/css/material-design-iconic-font.css" rel="stylesheet">
+  <link href="src/css/swiper.css" rel="stylesheet">
 </head>
 
 <body>
@@ -265,5 +266,6 @@
 
   </div>
 </body>
-
+<script src="./src/js/jquery.min.js"></script>
+<script src="./src/js/script.js"></script>
 </html>
