add icons info and mail

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="hk-screen hk-main">
     <header class="hk-header">
       <a class="hk-subscribe" href="">
-        <span class="hk-subscribe-icon"></span>
+        <span class="hk-subscribe-icon"><i class="zmdi zmdi-email"></i></span>
         <span class="hk-subscribe-link">Subscribe to our newsletter</span>
       </a>
 
@@ -158,11 +158,11 @@
       <div class="not-relative">
         <h2>What is Hacken</h2>
         <div class="hk-hacken-figure absolute-center margin-none">
-          <div id="hacken-1">Hacken accelerator <span>i</span></div>
-          <div id="hacken-2">Annual HackIT <br />Conference <span>i</span></div>
-          <div id="hacken-3">HackenProof <span>i</span></div>
-          <div id="hacken-4">CyberSecurity <br />analytics center <span>i</span></div>
-          <div id="hacken-5">Zero-day remuneration <br />platform <span>i</span></div>
+          <div id="hacken-1">Hacken accelerator <span class="info-icon"><i class="zmdi zmdi-info-outline"></i></span></div>
+          <div id="hacken-2">Annual HackIT <br />Conference <span class="info-icon"><i class="zmdi zmdi-info-outline"></i></span></div>
+          <div id="hacken-3">HackenProof <span class="info-icon"><i class="zmdi zmdi-info-outline"></i></span></div>
+          <div id="hacken-4">CyberSecurity <br />analytics center <span class="info-icon"><i class="zmdi zmdi-info-outline"></i></span></div>
+          <div id="hacken-5">Zero-day remuneration <br />platform <span class="info-icon"><i class="zmdi zmdi-info-outline"></i></span></div>
         </div>
       </div>
     </div>
