--- a/index.html
+++ b/index.html
@@ -247,22 +247,32 @@
   <div class="hk-screen hk-token_sale">
     <div class="hk-central_block">
       <div>
-        <h2 class="">About project</h2>
-        <hr />
-        <p class="hk-about-quote_text">Hacken is the first cybersecurity expertise decentralized cryptocurrency, build on Ethereum.</p>
-        <p class="hk-about-descr">
-          Hacken is the first cyber security expertise decentralized cryptocurrency, build on Ethereum. It creates the ecosystem for providing high quality cyber security services for the companies all around the world. The Token sale is powered by the CyberGuard Company.
-          CyberGuard accumulates and distributes the investments, controls the processes and develops the HackenProof platform a marketplace for the cyber security services.
-        </p>
-        <p class="hk-about-descr">
-          The platform will allow users to purchase penetration test services for their products or systems. HackenProof will provide clients with the o fficial digital mark and certificate in case of successful completion of cybersecurity test.
-          <br /><br /> The tests will be run by the best teams of us white hackers.
-        </p>
+        <h2 class="">Token sale structure</h2>
+        <div class="hk-token_sale-figure">
+          <div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
   <div class="hk-screen hk-burning">
-
+    <div class="hk-central_block">
+      <div>
+        <h2 class="">Burning Haken model</h2>
+        <hr />
+        <p class="hk-burning-quote_text">Hacken uses revolutionary burning model for the investors equity growth, instead
+of traditional profit share or buy-back schemes.</p>
+        <p class="hk-burning-descr">
+          Hacken uses revolutionary burning model for the investors equity growth, instead of traditional profit share or buy-back schemes.
+          <br /><br />All sales at Hackenproof Marketplace and Hacken Accelerator are made in Hackens only. All profits from the operations earned are split in half. Half of the Hackens is deactivated and removed from the system and the other half is send back for sale at the open market.
+          <br /><br />This model leads for long run investment attractiveness by disbalancing Hackens supply and demand.
+        </p>
+        <p class="hk-burning-descr">
+          Hacken Ecosystem development would lead to Hacken demand increase from the Clients and VC at the same time there would be less Hackens available due to its constant deactivation. Less investors will want to sell their Hackens which will permanently increase Hackens market price.
+          <br /><br />Per mathematical calculations such model will lead to higher equity growth comparing with traditional profit share due to allocation of the profits from burned Hackens to long run investors.
+        </p>
+      </div>
+    </div>
   </div>
   <div class="hk-screen hk-details">
 
