team slider in process

--- a/index.html
+++ b/index.html
@@ -273,13 +273,138 @@
   <div class="hk-screen hk-bounty">
 
   </div>
-  <div class="hk-screen hk-team">
-
+  <div class="hk-screen hk-team hk-milestones">
+    <div class="hk-central_block">
+      <div class="not-relative">
+        <div class="left-side">
+          <h2>Executive<br> team</h2>
+          <div class="slider-pagination">
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-next"></div>
+          </div>
+        </div>
+        <div class="team-slider">
+          <div id="swiper-container-team" class="swiper-container">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img src="./src/img/team-1.jpg" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./src/img/logo-hackit.png" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./src/img/logo-ambisafe.png" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./src/img/logo-deloitte.png" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./src/img/logo-axon.png" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./src/img/logo-hackit.png" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./src/img/logo-ambisafe.png" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./src/img/logo-deloitte.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="hk-screen hk-partners">
 
+  <div class="hk-screen hk-partners hk-milestones">
+    <div class="hk-central_block">
+        <div class="not-relative">
+          <div class="block-title-with-pagination">
+            <h2>Partners</h2>
+            <div class="slider-pagination">
+              <div class="swiper-button-prev"></div>
+              <div class="swiper-pagination"></div>
+              <div class="swiper-button-next"></div>
+            </div>
+          </div>
+          <div>
+            <div class="partners-slider">
+              <div id="swiper-container-partners" class="swiper-container">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <img src="./src/img/logo-axon.png" alt="">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./src/img/logo-hackit.png" alt="">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./src/img/logo-ambisafe.png" alt="">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./src/img/logo-deloitte.png" alt="">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./src/img/logo-axon.png" alt="">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./src/img/logo-hackit.png" alt="">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./src/img/logo-ambisafe.png" alt="">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./src/img/logo-deloitte.png" alt="">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="hk-header">
+              <a class="hk-subscribe" href="">
+                <span class="hk-subscribe-icon"><i class="zmdi zmdi-email"></i></span>
+                <span class="hk-subscribe-link">Subscribe to our newsletter</span>
+              </a>
+
+              <ul class="hk-social">
+                <li class="hk-social-link">
+                  <a href="#" role="link">
+                    <i class="zmdi zmdi-twitter"></i>
+                  </a>
+                </li>
+                <li class="hk-social-link">
+                  <a href="#" role="link">
+                    <i class="zmdi zmdi-facebook"></i>
+                  </a>
+                </li>
+                <li class="hk-social-link">
+                  <a href="#" role="link">
+                    <i class="zmdi zmdi-twitter"></i>
+                  </a>
+                </li>
+                <li class="hk-social-link">
+                  <a href="#" role="link">
+                    <i class="zmdi zmdi-reddit"></i>
+                  </a>
+                </li>
+                <li class="hk-social-link">
+                  <a href="#" role="link">
+                    <i class="zmdi zmdi-twitter"></i>
+                  </a>
+                </li>
+                <li class="hk-social-link">
+                  <a href="#" role="link">
+                    <i class="zmdi zmdi-twitter"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
   </div>
 </body>
 <script src="./src/js/jquery.min.js"></script>
+<script src="./src/js/swiper.jquery.min.js"></script>
 <script src="./src/js/script.js"></script>
 </html>
