--- a/index.html
+++ b/index.html
@@ -275,7 +275,36 @@ of traditional profit share or buy-back schemes.</p>
     </div>
   </div>
   <div class="hk-screen hk-details">
-
+    <div class="hk-central_block">
+      <div>
+        <h2 class="">Token sale detailes</h2>
+        <hr />
+        <p class="hk-details-quote_text">Total supply: 20 mln Hackens. 1.3 mln at presale (1 mln + 30% bonus) and 18.7 mln at Token sale.
+  No future emissions</p>
+        <div  class="hk-details-panes_container">
+          <div class="hk-details-pane">
+            <h5>Symbol</h5>
+            HKN
+          </div>
+          <div class="hk-details-pane">
+            <h5>Initial price</h5>
+            1 Hacken = 1 USD
+          </div>
+          <div class="hk-details-pane">
+            <h5>Crypto currencies<br />accepted</h5>
+            BTC, ETH, DASH,<br />LTC, ETC, USDT,<br />EUR, USD
+          </div>
+          <div class="hk-details-pane">
+            <h5>Length of Token sale</h5>
+            1 month from<br />October 7th 2017
+          </div>
+          <div class="hk-details-pane">
+            <h5>Escrow</h5>
+            80% of the funds<br />raised are kept at<br />escrow account
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="hk-screen hk-bonuses">
 
