9th without timer

--- a/index.html
+++ b/index.html
@@ -307,7 +307,38 @@ of traditional profit share or buy-back schemes.</p>
     </div>
   </div>
   <div class="hk-screen hk-bonuses">
-
+    <div class="hk-central_block">
+      <div>
+        <h2 class="">Bonuses</h2>
+        <p>
+          Only just now you can get an extra bonuses
+        </p>
+        <div class="hk-bonuses-figure">
+          <div class="hk-bonus_timer">
+            <p>Time to complete current bonuse:</p>
+            <hr />
+          </div>
+          <div class="hk-bonuse-circle_container">
+            <div class="hk-bonus_circle bonus_active">
+              <span class="hk-bonus_percent">+25%</span>
+              <span class="hk-bonus_time">1-4 hours</span>
+            </div>
+            <div class="hk-bonus_circle">
+              <span class="hk-bonus_percent">+20%</span>
+              <span class="hk-bonus_time">1-2 days</span>
+            </div>
+            <div class="hk-bonus_circle">
+              <span class="hk-bonus_percent">+15%</span>
+              <span class="hk-bonus_time">3-7 days</span>
+            </div>
+            <div class="hk-bonus_circle">
+              <span class="hk-bonus_percent">+10%</span>
+              <span class="hk-bonus_time">1-2 week</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="hk-screen hk-bounty">
 
