Add timer for bonuses

--- a/index.html
+++ b/index.html
@@ -312,6 +312,45 @@
           <div class="hk-bonus_timer">
             <p>Time to complete current bonuse:</p>
             <hr />
+            <div class="hk-bonus_timer-time">
+
+              <div class="hk-bonus_timer-timetick">
+                <div id="timetick-day" class="timetick-time day">
+                  01
+                </div>
+                <div class="timetick-desc">
+                  days
+                </div>
+              </div>
+
+              <div class="hk-bonus_timer-timetick">
+                <div id="timetick-hour" class="timetick-time">
+                  14
+                </div>
+                <div class="timetick-desc">
+                  hours
+                </div>
+              </div>
+
+              <div class="hk-bonus_timer-timetick">
+                <div id="timetick-minute" class="timetick-time">
+                  03
+                </div>
+                <div class="timetick-desc">
+                  minutes
+                </div>
+              </div>
+
+              <div class="hk-bonus_timer-timetick">
+                <div id="timetick-second" class="timetick-time">
+                  49
+                </div>
+                <div class="timetick-desc">
+                  seconds
+                </div>
+              </div>
+
+            </div>
           </div>
           <div class="hk-bonuse-circle_container">
             <div class="hk-bonus_circle bonus_active">
