--- a/index.html
+++ b/index.html
@@ -96,6 +96,46 @@
     <div class="hk-timer">
       <div class="hk-time">
         <span class="hk-time-header">Time to start</span>
+
+        <div class="hk-bonus_timer-time__main">
+
+          <div class="hk-bonus_timer-timetick__main">
+            <div id="timetick-day-main" class="timetick-time day">
+              01
+            </div>
+            <div class="timetick-desc">
+              days
+            </div>
+          </div>
+
+          <div class="hk-bonus_timer-timetick__main">
+            <div id="timetick-hour-main" class="timetick-time">
+              14
+            </div>
+            <div class="timetick-desc">
+              hours
+            </div>
+          </div>
+
+          <div class="hk-bonus_timer-timetick__main">
+            <div id="timetick-minute-main" class="timetick-time">
+              03
+            </div>
+            <div class="timetick-desc">
+              minutes
+            </div>
+          </div>
+
+          <div class="hk-bonus_timer-timetick__main">
+            <div id="timetick-second-main" class="timetick-time">
+              49
+            </div>
+            <div class="timetick-desc">
+              seconds
+            </div>
+          </div>
+      </div>
+      </div>
       </div>
       <div class="hk-amount">
         <span class="hk-amount-header">Amount of money raised</span>
