--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 
 <body>
   <div class="hk-screen hk-main">
+    <div class="video-container">
+      <video id="video-loader" preload autoplay>
+          <source src="./src/video/onload.mov" />
+      </video>
+    </div>
     <header class="hk-header">
       <a class="hk-subscribe" href="">
         <span class="hk-subscribe-icon"><i class="zmdi zmdi-email"></i></span>
@@ -141,6 +146,7 @@
         <span class="hk-amount-header">Amount of money raised</span>
         <span class="hk-amount-number">36</span>
       </div>
+
     </div>
   </div>
   <div class="hk-screen hk-about">
