correct view on 1540px and more

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         <p class="hk-burning-quote_text">Hacken uses revolutionary burning model for the investors equity growth, instead of traditional profit share or buy-back schemes.</p>
         <p class="hk-burning-descr">
           Hacken uses revolutionary burning model for the investors equity growth, instead of traditional profit share or buy-back schemes.
-          <br /><br />All sales at Hackenproof Marketplace and Hacken Accelerator are made in Hackens only. All profits from the operations earned are split in half. Half of the Hackens is deactivated and removed from the system and the other half is
+          <br /><br />All sales at HackenProof Marketplace and Hacken Accelerator are made in Hackens only. All profits from the operations earned are split in half. Half of the Hackens is deactivated and removed from the system and the other half is
           send back for sale at the open market.
           <br /><br />This model leads for long run investment attractiveness by disbalancing Hackens supply and demand.
         </p>
@@ -280,7 +280,7 @@
       <div>
         <h2 class="">Token sale detailes</h2>
         <hr />
-        <p class="hk-details-quote_text">Total supply: 20 mln Hackens. 1.3 mln at presale (1 mln + 30% bonus) and 18.7 mln at Token sale. No future emissions</p>
+        <p class="hk-details-quote_text">Total supply: 20 mln Hackens. 1.3 mln at presale (1 mln + 30% bonus) and 18.7 mln at Token sale.<br />No future emissions</p>
         <div class="hk-details-panes_container">
           <div class="hk-details-pane">
             <h5>Symbol</h5> HKN
@@ -292,7 +292,7 @@
             <h5>Crypto currencies<br />accepted</h5> BTC, ETH, DASH,<br />LTC, ETC, USDT,<br />EUR, USD
           </div>
           <div class="hk-details-pane">
-            <h5>Length of Token sale</h5> 1 month from<br />October 7th 2017
+            <h5>Length of<br />Token sale</h5> 1 month from<br />October 7th 2017
           </div>
           <div class="hk-details-pane">
             <h5>Escrow</h5> 80% of the funds<br />raised are kept at<br />escrow account
